--- a/docs/examples/ex_001_basic_usage.ipynb
+++ b/docs/examples/ex_001_basic_usage.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "4848c79c-7e10-4cb7-aaa4-5dfb7500705f",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {
       "image/png": {
        "unconfined": true
@@ -52,52 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "f85ab6c6-cb25-4326-8464-f14fcaf9cc7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"400px\"\n",
-       "            height=\"400px\"\n",
-       "            src=\"_tmp.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f6461c20550>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph = cgt.build_interactive_graph(width=\"400px\",\n",
-    "                                    height=\"400px\",\n",
-    "                                    bgcolor='#222222',\n",
-    "                                    font_color='white') # constructs a pyvis interactive graph\n",
-    "graph.show('_tmp.html')  # render the pyvis interactive graph here!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "d553a1de-4bfa-46e0-961c-547bfbb959b7",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +63,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {
       "image/png": {
        "unconfined": true
@@ -123,6 +79,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d553a1de-4bfa-46e0-961c-547bfbb959b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "8aa5df66-8b73-4ea0-b042-828409e33bcf",
    "metadata": {},
@@ -136,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "cf642e9e-8f69-4bd0-8f34-5856d03fe37a",
    "metadata": {},
    "outputs": [
@@ -147,7 +111,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {
       "image/png": {
        "unconfined": true
@@ -175,48 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "4962ce48-bef6-4366-adac-c12e1362d167",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"400px\"\n",
-       "            height=\"400px\"\n",
-       "            src=\"_tmp.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f64617b7d90>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "graph = cgt.build_interactive_graph(width=\"400px\",\n",
-    "                                    height=\"400px\",\n",
-    "                                    bgcolor='#222222',\n",
-    "                                    font_color='white') # constructs a pyvis interactive graph\n",
-    "graph.show('_tmp.html')  # render the pyvis interactive graph here!"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -228,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "0848f631-7753-48cf-bf20-312498f31a12",
    "metadata": {},
    "outputs": [
@@ -239,7 +166,7 @@
        " <AxesSubplot: >)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -276,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "1c42a9ad-8278-49ac-a6eb-e087e6428e7e",
    "metadata": {},
    "outputs": [
@@ -431,7 +358,7 @@
        "    self.set_theta_direction(self._default_theta_direction)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "1fb967c4-40f1-4fb5-a098-c589fe7eef28",
    "metadata": {},
    "outputs": [
@@ -564,7 +491,7 @@
        "        self.__clear()"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "840cd027-fccf-4693-be9a-10cbf8b153cf",
    "metadata": {},
    "outputs": [
@@ -723,7 +650,7 @@
        "    Axes.set_ylim(self, -np.pi / 2.0, np.pi / 2.0)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "be352520-f25f-49ef-99e2-6c3c86892006",
    "metadata": {},
    "outputs": [
@@ -835,7 +762,7 @@
        "    self.yaxis.set_major_formatter(NullFormatter())"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +775,31 @@
    "cell_type": "markdown",
    "id": "b7cc55e8-552e-44c9-b354-061c513a69ba",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Interactive Graph\n",
+    "\n",
+    "In a jupyter notebook, you can construct a pyvis interactive graph from a `ClassGraphTree` instance, `cgt` with:\n",
+    "\n",
+    "```python\n",
+    "graph = cgt.build_interactive_graph(width=\"400px\",\n",
+    "                                    height=\"400px\",\n",
+    "                                    bgcolor='#222222',\n",
+    "                                    font_color='white') # constructs a pyvis interactive graph\n",
+    "graph.show('_tmp.html')  # render the pyvis interactive graph here!\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be589e4b-35d6-44f3-b792-ed1addcb6495",
+   "metadata": {},
+   "source": [
+    "### Command Line Usage\n",
+    "\n",
+    "You can also build plots from the command line! \n",
+    "\n",
+    "ADD SOME EXAMPLES HERE!!!!!!!!!!!!!!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -864,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "0fae710a-ea9f-4c3a-9d65-610acf0ccd8c",
    "metadata": {},
    "outputs": [
@@ -874,7 +825,7 @@
        "method_descriptor"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
