code widget, still in progress

--- a/docs/examples/ex_001_basic_usage.ipynb
+++ b/docs/examples/ex_001_basic_usage.ipynb
@@ -773,6 +773,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae4ad5b6-c3c5-4065-9cf3-1d235e15c7b2",
+   "metadata": {},
+   "source": [
+    "Additionally, from a Jupyter notebook, you can use `cgt.display_code_comparison()` to spawn the Code Comparison Widget (see the Examples page for a demonstration)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b7cc55e8-552e-44c9-b354-061c513a69ba",
    "metadata": {},
    "source": [
@@ -787,18 +795,6 @@
     "                                    font_color='white') # constructs a pyvis interactive graph\n",
     "graph.show('_tmp.html')  # render the pyvis interactive graph here!\n",
     "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be589e4b-35d6-44f3-b792-ed1addcb6495",
-   "metadata": {},
-   "source": [
-    "### Command Line Usage\n",
-    "\n",
-    "You can also build plots from the command line! \n",
-    "\n",
-    "ADD SOME EXAMPLES HERE!!!!!!!!!!!!!!"
    ]
   },
   {
